<resources>
    <string name="app_name">A5</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="percent">Percent</string>
    <string name="percentNum">0%</string>
    <string name="tip">Tip</string>
    <string name="tip_count">$0.00</string>
    <string name="total">Total</string>
    <string name="total_count">$0.00</string>
    <string name="split_bill">Split Bill?</string>
    <string name="per_person">Per Person</string>
    <string name="per_person_count">$0.00</string>


</resources>
