<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itp341.bhatia.shamit.a5.MainActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bill_amount"
            android:text="@string/bill_amount"
            android:textSize="20sp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="25sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bill_edit_text"
            android:layout_alignBaseline="@+id/bill_amount"
            android:layout_toEndOf="@+id/bill_amount"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/percent"
            android:text="@string/percent"
            android:textSize="20sp"
            android:layout_below="@+id/bill_amount"
            android:layout_alignStart="@+id/bill_amount"
            android:layout_alignEnd="@+id/bill_amount"
            android:layout_marginBottom="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/percentNum"
            android:text="@string/percentNum"
            android:textSize="20sp"
            android:layout_below="@+id/bill_amount"
            android:layout_toEndOf="@+id/percent"
            android:layout_alignStart="@+id/bill_edit_text"/>



        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekbar"
            android:layout_below="@+id/bill_amount"
            android:layout_toEndOf="@+id/percentNum"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/percent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip"
            android:text="@string/tip"
            android:textSize="20sp"
            android:layout_below="@+id/percent"
            android:layout_alignStart="@+id/percent"
            android:layout_alignEnd="@+id/percent"
            android:layout_marginBottom="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tipCount"
            android:text="@string/tip_count"
            android:textSize="20sp"
            android:layout_below="@+id/percent"
            android:layout_toEndOf="@+id/tip"
            android:layout_alignStart="@+id/bill_edit_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total"
            android:text="@string/total"
            android:textSize="20sp"
            android:layout_below="@+id/tip"
            android:layout_alignStart="@+id/tip"
            android:layout_alignEnd="@+id/tip"
            android:layout_marginBottom="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalCount"
            android:text="@string/tip_count"
            android:textSize="20sp"
            android:layout_below="@+id/tip"
            android:layout_toEndOf="@+id/total"
            android:layout_alignStart="@+id/bill_edit_text"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/view"
            android:layout_below="@+id/total"
            android:background="@android:color/black"
            android:layout_marginBottom="20sp"
            android:layout_marginEnd="5sp"
            android:layout_marginStart="5sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/splitBill"
            android:text="@string/split_bill"
            android:textSize="20sp"
            android:layout_below="@+id/view"
            android:layout_alignStart="@+id/total"
            android:layout_alignEnd="@+id/total"
            android:layout_marginBottom="20sp"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_below="@+id/view"
            android:layout_toEndOf="@+id/splitBill"
            android:entries="@array/label_array_split_bill"
            android:layout_alignStart="@+id/bill_edit_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/perPerson"
            android:text="@string/per_person"
            android:textSize="20sp"
            android:layout_below="@+id/splitBill"
            android:layout_alignStart="@+id/splitBill"
            android:layout_alignEnd="@+id/splitBill"
            android:layout_marginBottom="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/perPersonCount"
            android:text="@string/per_person_count"
            android:textSize="20sp"
            android:layout_below="@+id/splitBill"
            android:layout_toEndOf="@+id/perPerson"
            android:layout_alignStart="@+id/bill_edit_text"/>



    </RelativeLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
